# Fukukouou_server_reborn

./: Cargo.toml  README.md  diesel.toml  sample.db
.github/workflows/: CI.yml  Release.yml
migrations/2025-05-07-022257_create_round1/: down.sql  up.sql
migrations/2025-05-07-022257_create_round1_info/: down.sql  up.sql
migrations/2025-05-07-022300_create_round1_data/: down.sql  up.sql
migrations/2025-05-14-090317_create_round1_questions/: down.sql  up.sql
migrations/2025-08-03-022912_create_round2_data/: down.sql  up.sql
src/: actorServer_forws.rs  db.rs  main.rs  model_round1.rs  model_round1_questions.rs  model_round2.rs  schema.rs  ws_actors.rs
src/api/: route.rs
src/api/route/: Round1Server.rs  Round2Server.rs
