[package]
name = "fukukouou_server_reborn"
version = "0.0.1"
authors = ["skylinebnr334 <168154498+skylinebnr334@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
env_logger = "0.11.8"
log = "0.4.27"
diesel = { version = "2.2.10", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.33.0", features = ["bundled"]}
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web-actors = "4.3.1"
rand = "0.9.1"
utoipa = "5"
utoipa-swagger-ui = "9"
